feat: v2.0 load-test platform — auto-deploy + web monitor + remote control
- deploy.sh: idempotent test-server builder (offline-mode, RCON, throttle off, Via, heap)
- run-server.sh: ZGC boot flags, config-driven
- monitor/: Express + WebSocket dashboard, live TPS/MSPT/players/RSS/bots, /api/stats JSON,
  token-gated start/stop for server + swarm
- swarm.js: now config-driven (config.json defaults, CLI overrides)
- install.sh: clean-VPS bootstrap (Node + JRE + npm install)
- config.json single source of truth; README v2

https://claude.ai/code/session_018nWj3L2QtJXtMnxuprkWE5